// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi dxdISE"
>
  <div
    className="sc-bczRLJ YKyJl"
  >
    <div
      className="sc-dkzDqf bjdYcD"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM EWshI"
    >
      Question content
    </div>
  </div>
</div>
`;

exports[`StepCard matches snapshot with more than one question 1`] = `
<div
  className="sc-gsnTZi dxdISE"
>
  <div
    className="sc-bczRLJ YKyJl"
  >
    <div
      className="sc-dkzDqf bjdYcD"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Questions 1 - 3
          </span>
          <span
            className="num-questions"
          >
             / 
            3
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM EWshI"
    >
      Question content
    </div>
  </div>
</div>
`;

exports[`TaskStepCard can optionally provide task 1`] = `
<div
  className="sc-gsnTZi dxdISE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ YKyJl exercise-step"
  >
    <div
      className="sc-dkzDqf bjdYcD"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@1
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM EWshI"
    />
  </div>
</div>
`;

exports[`TaskStepCard can optionally provide type 1`] = `
<div
  className="sc-gsnTZi dxdISE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ YKyJl exercise-step"
  >
    <div
      className="sc-dkzDqf bjdYcD"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@1
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM EWshI"
    />
  </div>
</div>
`;

exports[`TaskStepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi dxdISE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ YKyJl exercise-step"
  >
    <div
      className="sc-dkzDqf bjdYcD"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@1
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM EWshI"
    />
  </div>
</div>
`;
